# ml_store

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
catboost_info/: learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
config/: classifier_with_split_column.json  example_mssql_config.json  example_snowflake_config.json  example_with_data_loading.json  regressor_config.json
docs/: SQL_DATA_LOADING.md
examples/: advanced_validation_example.py  load_data_example.py  load_data_sql_example.py  simple_example.py  test_assign_split.py  test_single_random_seed.py  train_example.py  train_with_split_example.py
ml_store/: __init__.py  ml_evaluation.py  ml_functions.py
tests/: README.md  conftest.py  test_integration.py  test_ml_evaluation.py  test_ml_functions.py
