[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-store"
version = "0.1.0"
description = "Machine learning utilities with MLFlow, CatBoost, and Polars integration"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Wicks Analytics LTD", email = "wicks.analytics.ltd@gmail.com" }
]
maintainers = [
    { name = "Wicks Analytics LTD", email = "wicks.analytics.ltd@gmail.com" }
]
keywords = ["machine-learning", "mlflow", "catboost", "polars", "data-science", "model-evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.18.0",
    "catboost>=1.2.7",
    "polars>=1.13.0",
    "scikit-learn>=1.5.2",
    "numpy>=2.1.3",
    "analytics-store",
    "shap>=0.41.0",
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
sql = [
    "snowflake-connector-python>=3.0.0",
    "pyodbc>=4.0.0",
]
dev = [
    "ipykernel>=7.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "ml-store[sql,dev]",
]

[project.urls]
Homepage = "https://github.com/Wicks-Analytics/ml_store"
Documentation = "https://github.com/Wicks-Analytics/ml_store#readme"
Repository = "https://github.com/Wicks-Analytics/ml_store"
"Bug Tracker" = "https://github.com/Wicks-Analytics/ml_store/issues"

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv.sources]
analytics-store = { git = "https://github.com/Wicks-Analytics/analytics_store" }

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_store*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
